?Fixed bug where blocks float above seesaw -- removed whitespace and editted css
increased number of positions horizontally to 9.

--- a/css/seesaw.css
+++ b/css/seesaw.css
@@ -46,7 +46,7 @@ and open the template in the editor.
 
 .s{
     display: inline-block;
-    width: 13%;
+    width: 11.1%;
     padding:0;
     margin: 0;
     bottom: 0;
@@ -70,7 +70,6 @@ and open the template in the editor.
 
 .goalblock{
     height: 1em;
-    
 }
 
 
